--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
 								about
 							</h6>
 							<p class="pad-bottom-35 wow fadeInUp" data-wow-duration=".6s">
-								My full name is Tran Nguyen Hoang Bao. I used to work in many marketing and advertising positions at businesses, NPO and freelancer jobs. I have 4 years of experience working in marketing field, within 2.5 years in professional. My goal in the next 5 years is to constantly learn and develop myself in the branding or creative agency.
+								My full name is Tran Nguyen Hoang Bao. I worked in many marketing and communications positions both client and agency side, also some freelancer jobs and local NGOs pet projects. I have 4 years of experience working in marketing industry, within 2.5 years in professional. My goal in the next 5 years is to constantly learn and develop myself in the branding or planning fields.
 							</p>
 							<p class="wow fadeInUp" data-wow-duration=".4s">
-								I am a complete social animal. Find some of my sharing on <a href="https://www.facebook.com/BrianTranDMO" class="goto-social" target="_blank">Facebook</a>.
+								As a complete social animal, you could find some of my sharing on <a href="https://www.facebook.com/BrianTranDMO" class="goto-social" target="_blank">facebook</a>.
 
 							</p>
 							<div class="per-signature margin-top-sm wow fadeInUp" data-wow-duration=".4s">
@@ -172,25 +172,25 @@
 							<h6>what i do</h6>
 							<div class="row">
 								<div class="col-sm-3 col-xs-6 margin-bottom-sm icon-wrap wow fadeInLeft" data-wow-duration=".4s" data-wow-delay="0s">
-									<span class="icon pe-7s-graph3"></span>
+									<span class="icon pe-7s-culture"></span>
 									<span class="key-fact">
-										BRANDING		
+										BRANDING
 									</span>
 								</div>
 								<div class="col-sm-3 col-xs-6 margin-bottom-sm icon-wrap wow fadeInLeft" data-wow-duration=".4s" data-wow-delay=".1s">
-									<span class="icon pe-7s-browser"></span>
+									<span class="icon pe-7s-map"></span>
 									<span class="key-fact">
-										PROJECT MANAGEMENT	 
+										PROJECT MANAGEMENT
 									</span>
 								</div>
 								<div class="col-sm-3 col-xs-6 margin-bottom-sm icon-wrap wow fadeInLeft" data-wow-duration=".4s" data-wow-delay=".2s">
-									<span class=" icon pe-7s-tools"></span>
+									<span class=" icon pe-7s-graph1"></span>
 									<span class="key-fact">
-										DIGITAL MARKETING		
+										MARCOM	
 									</span>
 								</div>
 								<div class="col-sm-3 col-xs-6 margin-bottom-sm icon-wrap wow fadeInLeft" data-wow-duration=".4s" data-wow-delay=".3s">
-									<span class="icon pe-7s-note2"></span>
+									<span class="icon pe-7s-display1"></span>
 									<span class="key-fact">
 										PLANNING
 									</span>
@@ -204,27 +204,27 @@
 						<!--Skills Sec-->
 						<section id="skill_sec"  class="col-lg-10 col-md-11 col-sm-11 center-div skills-wrap  sec-pad-top sec-pad-bottom-xs">
 							<h6>marketing skills</h6>
-							<p class="wow fadeInUp" data-wow-duration=".4s">I started my first job <b>Digital Marketing Service</b> in 2014 with the <b>Data-driven method</b> to optimize multi-platform marketing tasks. In my opinion, <b>the final destination of marketing is the goal of the business</b> - like sales, market share, growth (yes, all is benefit, not cost at the end). Therefore, the consulting Business Model to have marketing harmony in the structure is considered my top responsibility as a marketing strategist..</p>
+							<p class="wow fadeInUp" data-wow-duration=".4s">In my opinion, the final destination of marketing also the goal of client's business - such as sales, market share, growth (yes, all is benefit, not cost at the end). Therefore, I start every project with client interview to understand their business model and hidden brand story inside. That give the foundation to find right message to right channnels with effective cost in execution. </p>
 							<div class="row margin-top-40">
 								<div class="col-sm-5 margin-bottom-sm">
-									<span class="progress-cat">MARKETING PLAN</span>
+									<span class="progress-cat">MARKETING PLANNING</span>
 									<div class="progress-bar-graph"> 
 										<div class="progress-bar-wrap">
 											<div class="bar-wrap">
-												<span data-width="100">
-													<strong><i>100</i>%</strong>
+												<span data-width="95">
+													<strong><i>90</i>%</strong>
 												</span>
 											</div>
 										</div>	
 									</div>
 								</div>
 								<div class="col-sm-offset-1 col-sm-5 margin-bottom-sm">
-									<span class="progress-cat">BUSINESS DESIGN</span>
+									<span class="progress-cat">BRAND MANAGEMENT</span>
 									<div class="progress-bar-graph"> 
 										<div class="progress-bar-wrap">
 											<div class="bar-wrap">
-												<span data-width="70">
-													<strong><i>70</i>%</strong>
+												<span data-width="65">
+													<strong><i>60</i>%</strong>
 												</span>
 											</div>
 										</div>	
@@ -232,12 +232,12 @@
 								</div>
 								<div class="clearfix"></div>
 								<div class="col-sm-5 margin-bottom-sm">
-									<span class="progress-cat">DIGITAL MARKETING</span>
+									<span class="progress-cat">ONLINE ADVERTISING</span>
 									<div class="progress-bar-graph"> 
 										<div class="progress-bar-wrap">
 											<div class="bar-wrap">
-												<span data-width="95">
-													<strong><i>95</i>%</strong>
+												<span data-width="90">
+													<strong><i>85</i>%</strong>
 												</span>	
 											</div>
 										</div>	
@@ -249,7 +249,7 @@
 										<div class="progress-bar-wrap">
 											<div class="bar-wrap">
 												<span data-width="80">
-													<strong><i>80</i>%</strong>
+													<strong><i>75</i>%</strong>
 												</span>
 											</div>
 										</div>	
@@ -257,25 +257,25 @@
 								</div>
 								<div class="clearfix"></div>
 								<div class="col-sm-5 margin-bottom-sm">
-									<span class="progress-cat">DATA ANALYSIS</span>
+									<span class="progress-cat">ACCOUNT MANAGEMENT</span>
 									<div class="progress-bar-graph"> 
 										<div class="progress-bar-wrap">
 											<div class="bar-wrap">
-												<span data-width="70">
-													<strong><i>70</i>%</strong>
+												<span data-width="85">
+													<strong><i>80</i>%</strong>
 												</span>
 											</div>
 										</div>	
 									</div>
 								</div>
 								<div class="col-sm-offset-1 col-sm-5 margin-bottom-sm">
-									<span class="progress-cat">BRAND POSITIONING</span>
+									<span class="progress-cat">DATA ANALYSIS</span>
 									<div class="progress-bar-graph"> 
 										<div class="progress-bar-wrap">
 											<div class="bar-wrap">
 												<div class="bar-wrap">
-													<span data-width="90">
-														<strong><i>90</i>%</strong>
+													<span data-width="75">
+														<strong><i>70</i>%</strong>
 													</span>
 												</div>	
 											</div>
@@ -345,12 +345,28 @@
 									<div class="col-xs-10 exp-content-wrap">
 										<div class="row">
 											<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0s">
-												<div class="col-sm-3 duration"><span>Sep 2019 - present</span></div>
+												<div class="col-sm-3 duration"><span>Jan 2020 - Present</span></div>
 												<div class="col-sm-9">
-													<span class="job-desn">Marketing Consultant</span>
-													<span class="job-loc">HongKong3 - Trang Coffee, Quang Nam
-	</span>
-													<p class="job-summary p-small">In this project, I had the opportunity to build from business model to branding implementation. With the initial positioning and clear financial plans, Hong Kong and Trang Coffee are becoming the best F&B chain in Tam Ky city.</p>
+													<span class="job-desn">Planner | Junior Brand Strategist</span>
+													<span class="job-loc">uForce Branding Agency | Da Nang</span>
+													<p class="job-summary p-small">uForce is an agency focus on building strong brand from strategy to identity and spread it by brand communications. I had the opportunity to evaluation business model and design brand strategy to leverage clients's businesses. As planner I also work on communications plan and brand marketing plan for SMEs and local NGOs projects.</p>
+												</div>
+											</div>	
+										</div>
+									</div>	
+								</div>
+								<div class="row exp-timeline timeline">
+									<div class="col-xs-2">
+										<div class="timeline-st"></div>
+									</div>
+									<div class="col-xs-10 exp-content-wrap">
+										<div class="row">
+											<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0s">
+												<div class="col-sm-3 duration"><span>Sep 2019 - Mar 2020</span></div>
+												<div class="col-sm-9">
+													<span class="job-desn">Marketing & Branding Consultant</span>
+													<span class="job-loc">Trang Coffee & HongKong3 | Quang Nam</span>
+													<p class="job-summary p-small">In this project, I had the opportunity to build from business model to branding implementation. With the initial positioning and clear financial plans, Trang Coffee is becoming the largest F&B chain in sale at Tam Ky city.</p>
 												</div>
 											</div>	
 										</div>
@@ -365,9 +381,8 @@
 											<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.2s">
 												<div class="col-sm-3 duration"><span>Mar 2019 — Sep 2019</span></div>
 												<div class="col-sm-9">
-													<span class="job-desn">Vietnamese Staff</span>
-													<span class="job-loc">Target Global English Academy, Cebu City, Philippines
-	</span>
+													<span class="job-desn">Communications and application design</span>
+													<span class="job-loc">Target Global English Academy | The Philippines</span>
 													<p class="job-summary p-small"> Responsible for the entire design of the company's media publications. Manage four main communication channels of the company (Website, Instagram, Facebook, Google SEO Maps). Facebook Rank reached 81 points. The growth rate of two social network channels in 60 days is 32% (Source: SMCC.vn).</p>
 												</div>
 											</div>	
@@ -383,11 +398,9 @@
 											<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.4s">
 												<div class="col-sm-3 duration"><span>Sep 2018 – Mar 2019</span></div>
 												<div class="col-sm-9">
-													<span class="job-desn">Marketing Manager
-	</span>
-													<span class="job-loc">Amomi Co.ltd, Danang City
-	</span>
-													<p class="job-summary p-small">Marketing management for two brands in Da Nang: Xeo Restaurant Chain, R & B Tea Danang. Managed In-house Marketing team of 10 employees (R&D, External, Media, Digital Marketing). Responsible for everything from products to media publications. Control sales and media channels with key partnes for Advertising and Media.</p>
+													<span class="job-desn">Marketing Manager</span>
+													<span class="job-loc">Amomi Co.ltd | Danang City</span>
+													<p class="job-summary p-small">Marketing management for two brands in Da Nang: Xeo Restaurant Chain, R&B Tea Danang. Managed In-house Marketing team of 5 employees responsible on R&D, Media, Digital Marketing. Responsible from products to media publications. Resonsible to sales and media channels, manage agencies and production houses for event and TVC.</p>
 												</div>
 											</div>	
 										</div>
@@ -400,13 +413,11 @@
 									<div class="col-xs-10 exp-content-wrap">
 										<div class="row">
 											<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.6s">
-												<div class="col-sm-3 duration"><span>Jan 2018 – Aug 2018</span></div>
+												<div class="col-sm-3 duration"><span>Dec 2017 – Jul 2018</span></div>
 												<div class="col-sm-9">
-													<span class="job-desn">Marketing Specialist
-	</span>
-													<span class="job-loc">OCEAN English Center, Quang Nam
-	</span>
-													<p class="job-summary p-small"> Build the Brand Identity and Brand Positioning for 2 branchs. Build a simple CRM and Sales Conversion System. SEO Fanpage and Maps, personal sales page, becoming the Top 2 English Center in Tam Ky- Quang Nam ( based on students number and internal survey report) </p>
+													<span class="job-desn">Digital Marketing Specialist</span>
+													<span class="job-loc">OCEAN English Center | Quang Nam</span>
+													<p class="job-summary p-small"> Build the Brand Identity and Brand Positioning for 2 branchs. Build a simple procedures for sales. Manage content on Fanpage, personal sales page. OCEAN became top 1 English Center in Tam Ky- Quang Nam based on students amount. </p>
 												</div>
 											</div>	
 										</div>
@@ -506,6 +517,7 @@
 								<img src="img/client5.png" alt="client">
 								<img src="img/client6.png" alt="client">
 								<img src="img/client7.png" alt="client">
+								<img src="img/client8.png" alt="client">
 							</div>
 						</section>
 						<!--/Client Sec-->
@@ -585,7 +597,7 @@
 							
 							<div class="email-direct">
 								<p class="wow fadeInRight" data-wow-duration=".4s">
-								<a href="https://www.messenger.com/t/BrianTranDMO">Or simply click <u>here</u> to chat with me via Messenger</a></p>
+								<a href="https://www.messenger.com/t/BrianTranDMO">Too lazy to email? Just click <u>here</u> to chat with me via Messenger</a></p>
 							</div>
 						</section>
 						<!--Contact Sec-->
@@ -597,7 +609,7 @@
 							<div class="row">
 								<div class="col-sm-6 available-wrap">
 									<span class="available-pointer"></span>
-									<span class="available-tag">Available for new job.</span>
+									<span class="available-tag">Available for new oppotunity.</span>
 								</div>
 								<div class="col-sm-6">
 									<div class="social-icons-wrap float-right">
