Content updated by Jane Tran

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 								about
 							</h6>
 							<p class="pad-bottom-35 wow fadeInUp" data-wow-duration=".6s">
-								My full name is Tran Nguyen Hoang Bao. I worked in many marketing and communications positions both client and agency side, also some freelancer jobs and local NGOs pet projects. I have 4 years of experience working in marketing industry, within 2.5 years in professional. My goal in the next 5 years is to constantly learn and develop myself in the branding or planning fields.
+								My full name is Tran Nguyen Hoang Bao. I have worked in many marketing and communications positions, in both client and agency side, freelance and local NGOs pet projects. I have 4 years of experience working in marketing industry, within 2.5 years working professionally. My goal in the next 5 years is to constantly learn and develop myself in the branding or planning fields.
 							</p>
 							<p class="wow fadeInUp" data-wow-duration=".4s">
 								As a complete social animal, you could find some of my sharing on <a href="https://www.facebook.com/BrianTranDMO" class="goto-social" target="_blank">facebook</a>.
@@ -349,7 +349,7 @@
 												<div class="col-sm-9">
 													<span class="job-desn">Planner | Junior Brand Strategist</span>
 													<span class="job-loc">uForce Branding Agency | Da Nang</span>
-													<p class="job-summary p-small">uForce is an agency focus on building strong brand from strategy to identity and spread it by brand communications. I had the opportunity to evaluation business model and design brand strategy to leverage clients's businesses. As planner I also work on communications plan and brand marketing plan for SMEs and local NGOs projects.</p>
+													<p class="job-summary p-small">uForce is an agency that focusing on building strong brand from strategy to identity and spreading it by brand communications. I had the opportunity to evaluation business model and design brand strategy to leverage clients's businesses. As a planner, I also work on communications plan and brand marketing plan for SMEs and local NGOs projects.</p>
 												</div>
 											</div>	
 										</div>
@@ -383,7 +383,7 @@
 												<div class="col-sm-9">
 													<span class="job-desn">Communications and application design</span>
 													<span class="job-loc">Target Global English Academy | The Philippines</span>
-													<p class="job-summary p-small"> Responsible for the entire design of the company's media publications. Manage four main communication channels of the company (Website, Instagram, Facebook, Google SEO Maps). Facebook Rank reached 81 points. The growth rate of two social network channels in 60 days is 32% (Source: SMCC.vn).</p>
+													<p class="job-summary p-small"> Responsible for the entire design of the company's media publications. Managed four main communication channels of the company (Website, Instagram, Facebook, Google SEO Maps). Facebook Rank reached 81 points. The growth rate of two social network channels in 60 days was 32% (Source: SMCC.vn).</p>
 												</div>
 											</div>	
 										</div>
@@ -400,7 +400,7 @@
 												<div class="col-sm-9">
 													<span class="job-desn">Marketing Manager</span>
 													<span class="job-loc">Amomi Co.ltd | Danang City</span>
-													<p class="job-summary p-small">Marketing management for two brands in Da Nang: Xeo Restaurant Chain, R&B Tea Danang. Managed In-house Marketing team of 5 employees responsible on R&D, Media, Digital Marketing. Responsible from products to media publications. Resonsible to sales and media channels, manage agencies and production houses for event and TVC.</p>
+													<p class="job-summary p-small">Marketing management for two brands in Da Nang: Xeo Restaurant Chain, R&B Tea Danang. Managed In-house Marketing team of 5 employees responsible for R&D, Media, Digital Marketing. Responsible from product to media publications. Resonsible for sales and media channels, managed agencies and production houses for events and TVCs.</p>
 												</div>
 											</div>	
 										</div>
@@ -417,7 +417,7 @@
 												<div class="col-sm-9">
 													<span class="job-desn">Digital Marketing Specialist</span>
 													<span class="job-loc">OCEAN English Center | Quang Nam</span>
-													<p class="job-summary p-small"> Build the Brand Identity and Brand Positioning for 2 branchs. Build a simple procedures for sales. Manage content on Fanpage, personal sales page. OCEAN became top 1 English Center in Tam Ky- Quang Nam based on students amount. </p>
+													<p class="job-summary p-small"> Build the Brand Identity and Brand Positioning for 2 branchs. Build a simple procedures for sales. Manage content on Fanpage, personal sales page. OCEAN became top 1 English Center in Tam Ky city - Quang Nam based on number of students. </p>
 												</div>
 											</div>	
 										</div>
@@ -433,7 +433,7 @@
 						<section id="edu_sec"  class="col-lg-10 col-md-11 col-sm-11 center-div education-wrap  sec-pad">
 							<h6>background</h6>
 							<p class="wow fadeInUp" data-wow-duration=".4s">
-								Over 3 years of pursuing professional marketing, I have gained a lot of knowledge and experience in the field of Marketing - Branding. I think one should never stop learning and go through a process of acquiring knowledge.
+								Over 2.5 years of pursuing professional marketing, I have gained a lot of knowledge and experience in the field of Marketing - Branding. I think one should never stop learning and go through a process of acquiring knowledge.
 							</p>
 							<div class="qualfication-wrap">
 								<div class="qualfication first-row wow fadeInUp" data-wow-duration=".4s">
@@ -496,7 +496,7 @@
 									</div>
 									<div class="col-sm-3">
 										<span class="design vertical-align-pad">
-											IELTS Overall 5.5
+											IELTS Overall 6.0
 										</span>
 									</div>
 								</div>
