--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
 								</a>	
 							</div>	
 							
-							<!--DOWNLOAD RESUME--D>
+							<!--DOWNLOAD RESUME-->
 							<div class="float-right social-download-wrap">
-								<a href="http://go.hoangbao.org/CV" class="btn btn-default float-left">
+								<a href="http://pdf-ace.com/pdfme?cache=0&print_media=1" target="_blank" class="btn btn-default float-left">
 									<span class="mask"></span>
 									<span class="btn-label">
 										<b>download resume</b>
