--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
 								about
 							</h6>
 							<p class="pad-bottom-35 wow fadeInUp" data-wow-duration=".6s">
-								My full name is Tran Nguyen Hoang Bao. I have worked in many marketing and communications positions, in both client and agency side, freelance and local NGOs pet projects. I have 4 years of experience working in marketing industry, within 2.5 years working professionally. My goal in the next 5 years is to constantly learn and develop myself in the branding or planning fields.
+								My full name is Tran Nguyen Hoang Bao. I'm a young marketer who has 2.5 years of working professionally in both client and agency sides. My goal in the next 3 years is to constantly learn and develop myself in the planning and brand management fields.
 							</p>
 							<p class="wow fadeInUp" data-wow-duration=".4s">
-								As a complete social animal, you could find some of my sharing on <a href="https://www.facebook.com/BrianTranDMO" class="goto-social" target="_blank">facebook</a>.
+								As a complete social animal, you could find some of my thoughts on <a href="https://www.facebook.com/BrianTranDMO" class="goto-social" target="_blank">facebook</a>.
 
 							</p>
 							<div class="per-signature margin-top-sm wow fadeInUp" data-wow-duration=".4s">
@@ -204,7 +204,7 @@
 						<!--Skills Sec-->
 						<section id="skill_sec"  class="col-lg-10 col-md-11 col-sm-11 center-div skills-wrap  sec-pad-top sec-pad-bottom-xs">
 							<h6>marketing skills</h6>
-							<p class="wow fadeInUp" data-wow-duration=".4s">In my opinion, the final destination of marketing also the goal of client's business - such as sales, market share, growth (yes, all is benefit, not cost at the end). Therefore, I start every project with client interview to understand their business model and hidden brand story inside. That give the foundation to find right message to right channnels with effective cost in execution. </p>
+							<p class="wow fadeInUp" data-wow-duration=".4s">In my opinion, the final destination of marketing is also be understood as the goal of client's business - such as sales, market share, growth (since after all, it's all about benefit, not cost in the end). Therefore, I start every project by "interviewing" clients to understand their business model and the hidden messages in their founding stories. Thus I could find the matching messages and proper communications channels with effective costs based on those gut information. </p>
 							<div class="row margin-top-40">
 								<div class="col-sm-5 margin-bottom-sm">
 									<span class="progress-cat">MARKETING PLANNING</span>
@@ -349,7 +349,7 @@
 												<div class="col-sm-9">
 													<span class="job-desn">Planner | Junior Brand Strategist</span>
 													<span class="job-loc">uForce Branding Agency | Da Nang</span>
-													<p class="job-summary p-small">uForce is an agency that focusing on building strong brand from strategy to identity and spreading it by brand communications. I had the opportunity to evaluation business model and design brand strategy to leverage clients's businesses. As a planner, I also work on communications plan and brand marketing plan for SMEs and local NGOs projects.</p>
+													<p class="job-summary p-small">uForce is an agency that focusing on building strong brands from strategy to identity then spreading it by brand communication. I had the opportunity to evaluate business models and design brand strategies to leverage clients's businesses. As a planner, I also work on communications plans and brand marketing plans for SMEs and local NGOs projects.</p>
 												</div>
 											</div>	
 										</div>
@@ -366,7 +366,7 @@
 												<div class="col-sm-9">
 													<span class="job-desn">Marketing & Branding Consultant</span>
 													<span class="job-loc">Trang Coffee & HongKong3 | Quang Nam</span>
-													<p class="job-summary p-small">In this project, I had the opportunity to build from business model to branding implementation. With the initial positioning and clear financial plans, Trang Coffee is becoming the largest F&B chain in sale at Tam Ky city.</p>
+													<p class="job-summary p-small">In this project, I had the opportunity to build from the original business model to branding implementation. With the initial positioning and clear financial plans, Trang Coffee is becoming the largest F&B chain in sale at Tam Ky city.</p>
 												</div>
 											</div>	
 										</div>
@@ -381,7 +381,7 @@
 											<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.2s">
 												<div class="col-sm-3 duration"><span>Mar 2019 — Sep 2019</span></div>
 												<div class="col-sm-9">
-													<span class="job-desn">Communications and application design</span>
+													<span class="job-desn">Communications Specialist | Graphic Designer</span>
 													<span class="job-loc">Target Global English Academy | The Philippines</span>
 													<p class="job-summary p-small"> Responsible for the entire design of the company's media publications. Managed four main communication channels of the company (Website, Instagram, Facebook, Google SEO Maps). Facebook Rank reached 81 points. The growth rate of two social network channels in 60 days was 32% (Source: SMCC.vn).</p>
 												</div>
@@ -400,7 +400,7 @@
 												<div class="col-sm-9">
 													<span class="job-desn">Marketing Manager</span>
 													<span class="job-loc">Amomi Co.ltd | Danang City</span>
-													<p class="job-summary p-small">Marketing management for two brands in Da Nang: Xeo Restaurant Chain, R&B Tea Danang. Managed In-house Marketing team of 5 employees responsible for R&D, Media, Digital Marketing. Responsible from product to media publications. Resonsible for sales and media channels, managed agencies and production houses for events and TVCs.</p>
+													<p class="job-summary p-small">Marketing & communications management for two brands in Da Nang: Xeo Restaurant Chain, R&B Tea Danang. My job was to manage an in-house Marketing team of 5 members in charge for R&D, Media, Digital Marketing. Responsible from product to media publications. Resonsible for sales and media channels, managed agencies and production houses for events and TVCs.</p>
 												</div>
 											</div>	
 										</div>
@@ -417,7 +417,7 @@
 												<div class="col-sm-9">
 													<span class="job-desn">Digital Marketing Specialist</span>
 													<span class="job-loc">OCEAN English Center | Quang Nam</span>
-													<p class="job-summary p-small"> Build the Brand Identity and Brand Positioning for 2 branchs. Build a simple procedures for sales. Manage content on Fanpage, personal sales page. OCEAN became top 1 English Center in Tam Ky city - Quang Nam based on number of students. </p>
+													<p class="job-summary p-small"> I was in charge of building the brand identity and Brand Positioning for 2 branchs. Build a simple procedures for sales. My job included managing the contents on Facebook Page, etc. I also created and applied a simple, effective procedure in sales. As a result, OCEAN became top 1 English Center in Tam Ky city - Quang Nam based on number of students. </p>
 												</div>
 											</div>	
 										</div>
@@ -431,9 +431,9 @@
 						
 						<!--Education Sec-->
 						<section id="edu_sec"  class="col-lg-10 col-md-11 col-sm-11 center-div education-wrap  sec-pad">
-							<h6>background</h6>
+							<h6>backgrounds</h6>
 							<p class="wow fadeInUp" data-wow-duration=".4s">
-								Over 2.5 years of pursuing professional marketing, I have gained a lot of knowledge and experience in the field of Marketing - Branding. I think one should never stop learning and go through a process of acquiring knowledge.
+								In over 2.5 years of pursuing professional marketing, I have accumulated a lot of knowledge and experience in terms of Marketing - Branding. I think one should never stop learning and going through a process of acquiring knowledge.
 							</p>
 							<div class="qualfication-wrap">
 								<div class="qualfication first-row wow fadeInUp" data-wow-duration=".4s">
@@ -489,14 +489,14 @@
 										<span class="row-count"><span>4</span></span>
 									</div>
 									<div class="col-sm-2">
-										<span class="yr-pers vertical-align-pad">-</span>
+										<span class="yr-pers vertical-align-pad">2019</span>
 									</div>
 									<div class="col-sm-5">
-										<span class="insti vertical-align-pad">English Skill</span>
+										<span class="insti vertical-align-pad">English Skills</span>
 									</div>
 									<div class="col-sm-3">
 										<span class="design vertical-align-pad">
-											IELTS Overall 6.0
+											IELTS Overall 5.5
 										</span>
 									</div>
 								</div>
@@ -609,7 +609,7 @@
 							<div class="row">
 								<div class="col-sm-6 available-wrap">
 									<span class="available-pointer"></span>
-									<span class="available-tag">Available for new oppotunity.</span>
+									<span class="available-tag">Available for new oppotunities.</span>
 								</div>
 								<div class="col-sm-6">
 									<div class="social-icons-wrap float-right">
