Anti Copy Enable

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<!--CSS-->
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		
-		<!--Anticopy--
+		<!--Anticopy-->
 		<style>
 				body{
 					-webkit-touch-callout: none;
