anti-rightclick Enable

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
 	<!--/Preloader-->
 	
-	<!--Anti Right Click --
+	<!--Anti Right Click -->
 	<div onselectstart="return false" oncontextmenu="return false">
 	
 	<!--Fixed Bg Image-->
