--- a/index.html
+++ b/index.html
@@ -674,8 +674,8 @@
 		<!-- /Container -->
 				
 		<!-- Scripts -->
-		<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-		<script src="js/angular.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.0/angular.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/modernizr.custom.js"></script>
 		<script src="js/app.js"></script>
