--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 								My full name is Tran Nguyen Hoang Bao. I'm a young marketer who has 2.5 years of working professionally in both client and agency sides. My goal in the next 3 years is to constantly learn and develop myself in the planning and brand management fields.
 							</p>
 							<p class="wow fadeInUp" data-wow-duration=".4s">
-								As a complete social animal, you could find some of my thoughts on <a href="https://www.facebook.com/BrianTranDMO" class="goto-social" target="_blank">facebook</a>.
+								As a complete social animal, you could find some of my thoughts on <a href="https://www.facebook.com/BrianTranDMO" class="goto-social" target="_blank" rel="noreferrer">facebook</a>.
 
 							</p>
 							<div class="per-signature margin-top-sm wow fadeInUp" data-wow-duration=".4s">
@@ -686,7 +686,7 @@
 		<script src="js/jQuery.appear.js"></script>
 		<script src="js/isotope.js"></script>
 		<script src="js/typed.js"></script>
-		<script src="js/lightgallery-all.js"></script>
+		<script rel="preload" src="js/lightgallery-all.js"></script>
 		<script src="js/jquery.mousewheel.min.js"></script>
 		<script src="js/owl.carousel.min.js"></script>
 		<script src="js/froogaloop2.min.js"></script>
