--- a/index.html
+++ b/index.html
@@ -677,6 +677,8 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.0/angular.min.js"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+		<script src="js/lazysizes.min.js" async></script>
+		<script src="js/lightgallery-all.js"></script>
 		<script src="js/modernizr.custom.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/controllers.js"></script>
@@ -686,13 +688,11 @@
 		<script src="js/jQuery.appear.js"></script>
 		<script src="js/isotope.js"></script>
 		<script src="js/typed.js"></script>
-		<script rel="preload" src="js/lightgallery-all.js"></script>
 		<script src="js/jquery.mousewheel.min.js"></script>
 		<script src="js/owl.carousel.min.js"></script>
 		<script src="js/froogaloop2.min.js"></script>
 		<script src="js/wow.min.js"></script>
 		<script src="js/init.js"></script>
-		<script src="js/lazysizes.min.js" async></script>
 		<script type="text/javascript">
 		$(window).load(function() {
         $('body').removeClass('preloading');
