--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 								My full name is Tran Nguyen Hoang Bao. I'm a young marketer who has 2.5 years of working professionally in both client and agency sides. My goal in the next 3 years is to constantly learn and develop myself in the planning and brand management fields.
 							</p>
 							<p class="wow fadeInUp" data-wow-duration=".4s">
-								As a complete social animal, you could find some of my thoughts on <a href="https://www.facebook.com/BrianTranDMO" class="goto-social" target="_blank" rel="noreferrer">facebook</a>.
+								As a complete social animal, you could find some of my thoughts on <a href="https://www.facebook.com/BrianTranDMO" class="goto-social" target="_blank"  rel="noreferrer">facebook</a>.
 
 							</p>
 							<div class="per-signature margin-top-sm wow fadeInUp" data-wow-duration=".4s">
@@ -674,11 +674,9 @@
 		<!-- /Container -->
 				
 		<!-- Scripts -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.0/angular.min.js"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-		<script src="js/lazysizes.min.js" async></script>
-		<script src="js/lightgallery-all.js"></script>
 		<script src="js/modernizr.custom.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/controllers.js"></script>
@@ -688,11 +686,13 @@
 		<script src="js/jQuery.appear.js"></script>
 		<script src="js/isotope.js"></script>
 		<script src="js/typed.js"></script>
+		<script rel="preload" src="js/lightgallery-all.js"></script>
 		<script src="js/jquery.mousewheel.min.js"></script>
 		<script src="js/owl.carousel.min.js"></script>
 		<script src="js/froogaloop2.min.js"></script>
 		<script src="js/wow.min.js"></script>
 		<script src="js/init.js"></script>
+		<script src="js/lazysizes.min.js" async></script>
 		<script type="text/javascript">
 		$(window).load(function() {
         $('body').removeClass('preloading');
