--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
 		<script src="js/jQuery.appear.js"></script>
 		<script src="js/isotope.js"></script>
 		<script src="js/typed.js"></script>
-		<script rel="preload" src="js/lightgallery-all.js"></script>
+		<script rel="preload" src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.2.18/js/lightgallery-all.js"></script>
 		<script src="js/jquery.mousewheel.min.js"></script>
 		<script src="js/owl.carousel.min.js"></script>
 		<script src="js/froogaloop2.min.js"></script>
