Color Scheme Changed
Background colors changed
Fixed name span

--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
 										</a>
 									</div>
 									<div class="copywrite-wrap text-right float-right">
-										<p class="copywrite"> <b>Brian Tran &copy; 2020, all rights reserved. </b> custom w/ original Eric's theme</p>
+										<p class="copywrite"> <b>Brian Tran &copy; 2020, all rights reserved. </b> Designed by Eric.</p>
 									</div>
 								</div>	
 							</div>	
