--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 									<div class="col-xs-10 exp-content-wrap">
 										<div class="row">
 											<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0s">
-												<div class="col-sm-3 duration"><span>Jan 2020 - Present</span></div>
+												<div class="col-sm-3 duration"><span>Jan 2020 - Sep 2020</span></div>
 												<div class="col-sm-9">
 													<span class="job-desn">Planner | Junior Brand Strategist</span>
 													<span class="job-loc">uForce Branding Agency | Da Nang</span>
@@ -658,7 +658,7 @@
 										</a>
 									</div>
 									<div class="copywrite-wrap text-right float-right">
-										<p class="copywrite"> <b>Brian Tran &copy; 2020, all rights reserved. </b> Designed by Eric.</p>
+										<p class="copywrite"> <b>Brian Tran &copy; 2020, all rights reserved. </b></p>
 									</div>
 								</div>	
 							</div>	
