--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<title>Hoang Bao Résume | Marketing | Branding</title>
-		<meta name="description" content="Hoang Bao's CV / Resume for a Marketing - Branding position!" />
+		<title>Hoang Bao Résume | Junior Planner</title>
+		<meta name="description" content="Hoang Bao's CV / Resume for a Planning position!" />
 		<meta name="keywords" content="Hoang Bao, digital marketing, cv marketing, marketing manager, digital marketing, imc, facebook ads, google ads" />
 		<meta name="author" content="Hoang Bao"/>
 		
 		<!--Open Graph-->
-		<meta property="og:title" content="Hoang Bao | Marketing & Branding"/>
+		<meta property="og:title" content="Hoang Bao | Junior Planner"/>
 		<meta property="og:type" content="website"/>
 		<meta property="og:url" content="https://cv.hoangbao.org/"/>
 		<meta property="og:image" content="https://cv.hoangbao.org/img/ogp.webp"/>
-		<meta property="og:site_name" content="Brian Tran Resume"/>
-		<meta property="og:description" content="Here is my CV / Resume for a Marketing - Branding position!"/>
+		<meta property="og:site_name" content="Hoang Bao Resume"/>
+		<meta property="og:description" content="Hoang Bao's CV / Resume for a Planning position!"/>
 		<!--/Open Graph-->
 		
 		<!--Favicon-->
@@ -132,7 +132,7 @@
 							<div class="float-left name">
 								<a data-scroll href="#body">
 									<span>
-										TRAN NGUYEN HOANG BAO | MARKETING & BRANDING
+										TRAN NGUYEN HOANG BAO | JUNIOR PLANNER
 									</span>
 								</a>	
 							</div>	
@@ -167,7 +167,7 @@
 								about
 							</h6>
 							<p class="pad-bottom-35 wow fadeInUp" data-wow-duration=".6s">
-								My full name is Tran Nguyen Hoang Bao. I'm a young marketer who has 2.5 years of working professionally in both client and agency sides. My goal in the next 3 years is to constantly learn and develop myself in the planning and brand management fields.
+								My full name is Tran Nguyen Hoang Bao. I'm a Junior Planner who has 2.5 years of working professionally in both client and agency sides. My goal in the next 3 years is to constantly learn and develop myself in the strategic planning fields.
 							</p>
 							<p class="wow fadeInUp" data-wow-duration=".4s">
 								As a complete social animal, you could find some of my thoughts on <a href="https://www.facebook.com/BrianTranDMO" class="goto-social" target="_blank"  rel="noreferrer">facebook</a>.
@@ -361,7 +361,7 @@
 												<div class="col-sm-9">
 													<span class="job-desn">Planner | Junior Brand Strategist</span>
 													<span class="job-loc">uForce Branding Agency | Da Nang</span>
-													<p class="job-summary p-small">uForce is an agency that focusing on building strong brands from strategy to identity then spreading it by brand communication. I had the opportunity to evaluate business models and design brand strategies to leverage clients's businesses. As a planner, I also work on communications plans and brand marketing plans for SMEs and local NGOs projects.</p>
+													<p class="job-summary p-small">uForce is an agency that focusing on building strong brands from strategy to identity then spreading it by brand communication. I had the opportunity to evaluate business models and design brand strategies to leverage clients's businesses. As a planner, I work on communications plans and brand marketing plans for SMEs and local NGOs projects.</p>
 												</div>
 											</div>	
 										</div>
@@ -376,9 +376,9 @@
 											<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0s">
 												<div class="col-sm-3 duration"><span>Sep 2019 - Mar 2020</span></div>
 												<div class="col-sm-9">
-													<span class="job-desn">Marketing & Branding Consultant</span>
+													<span class="job-desn">Marketing & Branding Consultant </span>
 													<span class="job-loc">Trang Coffee & HongKong3 | Quang Nam</span>
-													<p class="job-summary p-small">In this project, I had the opportunity to build from the original business model to branding implementation. With the initial positioning and clear financial plans, Trang Coffee is becoming the largest F&B chain in sale at Tam Ky city.</p>
+													<p class="job-summary p-small">In this 6 months project, I had the opportunity to build from the original business model to branding implementation. With the initial positioning and clear financial plans, Trang Coffee is becoming the largest F&B chain in sale at Tam Ky city.</p>
 												</div>
 											</div>	
 										</div>
@@ -408,7 +408,7 @@
 									<div class="col-xs-10 exp-content-wrap">
 										<div class="row">
 											<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.4s">
-												<div class="col-sm-3 duration"><span>Sep 2018 – Mar 2019</span></div>
+												<div class="col-sm-3 duration"><span>Aug 2018 – Mar 2019</span></div>
 												<div class="col-sm-9">
 													<span class="job-desn">Marketing Manager</span>
 													<span class="job-loc">Amomi Co.ltd | Danang City</span>
@@ -425,7 +425,7 @@
 									<div class="col-xs-10 exp-content-wrap">
 										<div class="row">
 											<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.6s">
-												<div class="col-sm-3 duration"><span>Dec 2017 – Jul 2018</span></div>
+												<div class="col-sm-3 duration"><span>Jul 2017 – Jul 2018</span></div>
 												<div class="col-sm-9">
 													<span class="job-desn">Digital Marketing Specialist</span>
 													<span class="job-loc">OCEAN English Center | Quang Nam</span>
