--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
 										</a>
 									</div>
 									<div class="copywrite-wrap text-right float-right">
-										<p class="copywrite"> <b>Brian Tran &copy; 2020, all rights reserved. </b></p>
+										<p class="copywrite"> <b>Brian Tran &copy; 2020, all rights reserved. Design based on Eric kit. </b></p>
 									</div>
 								</div>	
 							</div>	
