--- a/index.html
+++ b/index.html
@@ -393,9 +393,9 @@
 											<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.2s">
 												<div class="col-sm-3 duration"><span>Mar 2019 — Sep 2019</span></div>
 												<div class="col-sm-9">
-													<span class="job-desn">Communications Specialist | Graphic Designer</span>
+													<span class="job-desn">Communications Specialist</span>
 													<span class="job-loc">Target Global English Academy | The Philippines</span>
-													<p class="job-summary p-small"> Responsible for the entire design of the company's media publications. Managed four main communication channels of the company (Website, Instagram, Facebook, Google SEO Maps). Facebook Rank reached 81 points. The growth rate of two social network channels in 60 days was 32% (Source: SMCC.vn).</p>
+													<p class="job-summary p-small"> Responsible for the entire content of the company's media publications. Managed four main communication channels of the company (Website, Instagram, Facebook, Google SEO Maps). Facebook Rank reached 81 points. The growth rate of two social network channels in 60 days was 32% (Source: SMCC.vn).</p>
 												</div>
 											</div>	
 										</div>
@@ -427,7 +427,7 @@
 											<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.6s">
 												<div class="col-sm-3 duration"><span>Jul 2017 – Jul 2018</span></div>
 												<div class="col-sm-9">
-													<span class="job-desn">Digital Marketing Specialist</span>
+													<span class="job-desn">Marketing Specialist</span>
 													<span class="job-loc">OCEAN English Center | Quang Nam</span>
 													<p class="job-summary p-small"> I was in charge of building the brand identity and Brand Positioning for 2 branchs. Build a simple procedures for sales. My job included managing the contents on Facebook Page, etc. I also created and applied a simple, effective procedure in sales. As a result, OCEAN became top 1 English Center in Tam Ky city - Quang Nam based on number of students. </p>
 												</div>
