--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 							<div class="float-left name">
 								<a data-scroll href="#body">
 									<span>
-										TRAN NGUYEN HOANG BAO | JUNIOR PLANNER
+										HOANG BAO | JUNIOR PLANNER
 									</span>
 								</a>	
 							</div>	
@@ -184,9 +184,9 @@
 							<h6>what i do</h6>
 							<div class="row">
 								<div class="col-sm-3 col-xs-6 margin-bottom-sm icon-wrap wow fadeInLeft" data-wow-duration=".4s" data-wow-delay="0s">
-									<span class="icon pe-7s-culture"></span>
+									<span class="icon pe-7s-display1"></span>
 									<span class="key-fact">
-										BRANDING
+										PLANNING
 									</span>
 								</div>
 								<div class="col-sm-3 col-xs-6 margin-bottom-sm icon-wrap wow fadeInLeft" data-wow-duration=".4s" data-wow-delay=".1s">
@@ -198,13 +198,13 @@
 								<div class="col-sm-3 col-xs-6 margin-bottom-sm icon-wrap wow fadeInLeft" data-wow-duration=".4s" data-wow-delay=".2s">
 									<span class=" icon pe-7s-graph1"></span>
 									<span class="key-fact">
-										MARCOM	
+										DATA ANALYSIS	
 									</span>
 								</div>
 								<div class="col-sm-3 col-xs-6 margin-bottom-sm icon-wrap wow fadeInLeft" data-wow-duration=".4s" data-wow-delay=".3s">
-									<span class="icon pe-7s-display1"></span>
+									<span class="icon pe-7s-culture"></span>
 									<span class="key-fact">
-										PLANNING
+										BRANDING
 									</span>
 								</div>
 							</div>	
