--- a/index.html
+++ b/index.html
@@ -244,12 +244,12 @@
 								</div>
 								<div class="clearfix"></div>
 								<div class="col-sm-5 margin-bottom-sm">
-									<span class="progress-cat">ONLINE ADVERTISING</span>
+									<span class="progress-cat">DATA ANALYSIS</span>
 									<div class="progress-bar-graph"> 
 										<div class="progress-bar-wrap">
 											<div class="bar-wrap">
-												<span data-width="90">
-													<strong><i>85</i>%</strong>
+												<span data-width="70">
+													<strong><i>70</i>%</strong>
 												</span>	
 											</div>
 										</div>	
@@ -267,7 +267,7 @@
 										</div>	
 									</div>
 								</div>
-								<div class="clearfix"></div>
+								<!--div class="clearfix"></div>
 								<div class="col-sm-5 margin-bottom-sm">
 									<span class="progress-cat">ACCOUNT MANAGEMENT</span>
 									<div class="progress-bar-graph"> 
@@ -293,7 +293,7 @@
 											</div>
 										</div>	
 									</div>
-								</div>
+								</div-->
 								<div class="clearfix"></div>
 							</div>	
 						</section>
@@ -476,7 +476,7 @@
 									</div>
 									<div class="col-sm-3">
 										<span class="design vertical-align-pad">
-											Certification in: Google Analytics Individual | Search Ads 360  
+											Google Analytics Individual | Search Ads Certification | Display Ads Certification
 										</span>
 									</div>
 								</div>
@@ -572,7 +572,7 @@
 						<section id="contact_sec"  class="col-lg-10 col-md-11 col-sm-11 center-div contact-wrap  sec-pad-top sec-pad-bottom-sm">
 							<h6>contact</h6>
 							<div data-ng-controller="ContactController" class="align-center wow fadeInUp" data-wow-duration=".4s">
-								<h3>Hello <span  data-ng-bind="formData.inputName||'friend'"></span>, I'd love to hear from you.</h3>
+								<h3>Hello<span  data-ng-bind="formData.inputName||''"></span>, I'd love to hear from you.</h3>
 								<div>
 									<form action="https://formspree.io/xyyywrjn"
 											method="POST"class="row form-horizontal" role="form">
