--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<title>Hoang Bao Résume | Junior Planner</title>
-		<meta name="description" content="Hoang Bao's CV / Resume for a Planning position!" />
+		<meta name="description" content="Hoang Bao's CV / Resume for Junior Planner position!" />
 		<meta name="keywords" content="Hoang Bao, digital marketing, cv marketing, marketing manager, digital marketing, imc, facebook ads, google ads" />
 		<meta name="author" content="Hoang Bao"/>
 		
