--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
 							
 							<div class="email-direct">
 								<p class="wow fadeInRight" data-wow-duration=".4s">
-								<a href="https://www.messenger.com/t/BrianTranDMO">Too lazy to email? Just click <u>here</u> to chat with me via Messenger</a></p>
+								<a href="mailto:contact@hoangbao.org">Email to me at contact@hoangbao.org or get me on phone +84914872113</a></p>
 							</div>
 						</section>
 						<!--Contact Sec-->
