--- a/index.html
+++ b/index.html
@@ -609,7 +609,9 @@
 							
 							<div class="email-direct">
 								<p class="wow fadeInRight" data-wow-duration=".4s">
-								<a href="mailto:contact@hoangbao.org">Email to me at contact@hoangbao.org or get me on phone +84914872113</a></p>
+								<a href="mailto:contact@hoangbao.org">Email to me at contact@hoangbao.org</a>
+								<br>
+								<a href="tel:0914872113">or easily get me on phone +84 914 872 113</a></p>
 							</div>
 						</section>
 						<!--Contact Sec-->
@@ -658,7 +660,7 @@
 										</a>
 									</div>
 									<div class="copywrite-wrap text-right float-right">
-										<p class="copywrite"> <b>Brian Tran &copy; 2020, all rights reserved. Design based on Eric kit. </b></p>
+										<p class="copywrite"> <b>Brian Tran &copy; 2020, all rights reserved.<br>Design based on Eric kit. </b></p>
 									</div>
 								</div>	
 							</div>	
