--- a/index.html
+++ b/index.html
@@ -521,22 +521,24 @@
 							be-better-planner everyday by self-learn...
 							</p>
 							<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
-<div class="pa-carousel-widget" style="width:100%; height:480px; display:none;"
-  data-link="https://photos.app.goo.gl/WgAqEsZvy5agoAedA"
-  data-title="Hoang Bao&#39;s Certificates"
-  data-description="10 new photos added to shared album"
-  data-delay="2">
-  <object data="https://lh3.googleusercontent.com/Q8gA0WIzeBOMY3LkLTpsDQu1S7XXciTZnKM6LKc2TQallH_MH5mfUjlFGJUepdhN4WHypS_UzOwRk7wdK0ajLyR38aNPV1-jV5KjAmCkYHELWfq-_dFx39MxGTMOI_pLwXZY2QQu4IU=w1920-h1080"></object>
-  <object data="https://lh3.googleusercontent.com/Bv7xT5nnXtVWrMCn-D53pRNe-6iJVkLVnwaP7EOeG_ZYj5VJgerXBQaZdZ5235Yi53SyLOdXg7ynbu9NT4_2P5QQpzzIqlO83ek3ZFHshNxFaUnsYpBDVW5kS5urKhA9iW5bq1S8yHU=w1920-h1080"></object>
-  <object data="https://lh3.googleusercontent.com/SYadSovv3vTNTxrgOrKIPK-eVVh0LH3wkJSfMN6DfAoLQUotfWBpHgtfki27ihonbD_MilwO8n7Ki7bvkGv_qpbJLViEzj3G0bsMc68aUxpN1lawJsZBiddAk3SK2NeFTGlcnB2zruY=w1920-h1080"></object>
-  <object data="https://lh3.googleusercontent.com/tY7bdf0lg1x7LUFf6inaBU-2imUUpaNjc7G5V9wWWmCm7K6EkvFqDfCrQLyUVWCXXhdvEue6Pdy15EPiWYPp01HnpUXWqBI5ALJ94hcIIWylMmC-idB5-PyzTbMzPr6LhPAVp6O7Xv4=w1920-h1080"></object>
-  <object data="https://lh3.googleusercontent.com/NeYvpeSAnGmMS6YZuqt4eJ0mhRjSrNlzb180iu0hrTL8HW0kPah043WWHaSDzK88L5D2HRYJa1iLgG23Uqd94d6Y7sUKfnDUNuTKYZMvbOXyYn0OmG67Nahiv8Ch0_xu1Q8XYXpFJ7g=w1920-h1080"></object>
-  <object data="https://lh3.googleusercontent.com/KM0BD4st1NUResKO_R26wHg2m9q7EqGKvW1IzmLSyWDvEVYIsnqFURXPHNyOJZqnjbwiFamzxvcCJDGOQ_tt-cLu1nvCcrpG7-u9gRXGWq5vuq11xy3dsqd8iT7oH5b-h4ehOYecSs0=w1920-h1080"></object>
-  <object data="https://lh3.googleusercontent.com/Wb2lxEp1ORJon8_GSgyeQNoXi9e8KuUPNeUeNiQdcBnsX2YSaFSegNlwtkj8N1DgjEtN1nwvHJ9zzDg4tmjB36SVnU4OkJ_xJe217_CiXSi-sbfgCH7cPyoX9DrRkGhnc-dff2CC8d4=w1920-h1080"></object>
-  <object data="https://lh3.googleusercontent.com/85S6_Qmv5aAG1ssT9Z5Vh1LLo9c1kwMxbXBUdz7gvU3JqBkXuCAMGlPmI7a21o2uT7oKSD8UfNOsfovj3x31PdZeHfLuj3d00ZZ1Np7SzNyugxX-gb8Ny9fes65s0LIBh-7iN9fLgj8=w1920-h1080"></object>
-  <object data="https://lh3.googleusercontent.com/J9NUVo9vSaxNQerYrs6YWLkohpE4uxFeLEz5EQMtmGtONURLPMmwiZEmQmeYUI-M06bkRpdvhWK94v8Krdk182avLDGBCMtV_OBS0EOYokn4FSk_zNdN5wt_h_4eZwgTATO71c1FfjE=w1920-h1080"></object>
-  <object data="https://lh3.googleusercontent.com/0BA_xdU17x55If1mbW-rXwHA82mZz9R4voOzsp5FfiNPGI9Wroiai3oOWtfzrDSA8cyzfB1cczL4ib9Duk8-zr5CdhfD3z1kjLkgbmLuwiWsLHOkS1CBIVbS9l1a_6x8ooU788yVYO0=w1920-h1080"></object>
-</div>
+							<div class="pa-carousel-widget" style="width:100%; height:480px; display:none;"
+							  data-link=""
+							  data-title=""
+							  data-description=""
+							  data-delay="3">
+							  <object data="https://lh3.googleusercontent.com/Q8gA0WIzeBOMY3LkLTpsDQu1S7XXciTZnKM6LKc2TQallH_MH5mfUjlFGJUepdhN4WHypS_UzOwRk7wdK0ajLyR38aNPV1-jV5KjAmCkYHELWfq-_dFx39MxGTMOI_pLwXZY2QQu4IU=w1920-h1080"></object>
+							  <object data="https://lh3.googleusercontent.com/Bv7xT5nnXtVWrMCn-D53pRNe-6iJVkLVnwaP7EOeG_ZYj5VJgerXBQaZdZ5235Yi53SyLOdXg7ynbu9NT4_2P5QQpzzIqlO83ek3ZFHshNxFaUnsYpBDVW5kS5urKhA9iW5bq1S8yHU=w1920-h1080"></object>
+							  <object data="https://lh3.googleusercontent.com/SYadSovv3vTNTxrgOrKIPK-eVVh0LH3wkJSfMN6DfAoLQUotfWBpHgtfki27ihonbD_MilwO8n7Ki7bvkGv_qpbJLViEzj3G0bsMc68aUxpN1lawJsZBiddAk3SK2NeFTGlcnB2zruY=w1920-h1080"></object>
+							  <object data="https://lh3.googleusercontent.com/tY7bdf0lg1x7LUFf6inaBU-2imUUpaNjc7G5V9wWWmCm7K6EkvFqDfCrQLyUVWCXXhdvEue6Pdy15EPiWYPp01HnpUXWqBI5ALJ94hcIIWylMmC-idB5-PyzTbMzPr6LhPAVp6O7Xv4=w1920-h1080"></object>
+							  <object data="https://lh3.googleusercontent.com/NeYvpeSAnGmMS6YZuqt4eJ0mhRjSrNlzb180iu0hrTL8HW0kPah043WWHaSDzK88L5D2HRYJa1iLgG23Uqd94d6Y7sUKfnDUNuTKYZMvbOXyYn0OmG67Nahiv8Ch0_xu1Q8XYXpFJ7g=w1920-h1080"></object>
+							  <object data="https://lh3.googleusercontent.com/KM0BD4st1NUResKO_R26wHg2m9q7EqGKvW1IzmLSyWDvEVYIsnqFURXPHNyOJZqnjbwiFamzxvcCJDGOQ_tt-cLu1nvCcrpG7-u9gRXGWq5vuq11xy3dsqd8iT7oH5b-h4ehOYecSs0=w1920-h1080"></object>
+							  <object data="https://lh3.googleusercontent.com/Wb2lxEp1ORJon8_GSgyeQNoXi9e8KuUPNeUeNiQdcBnsX2YSaFSegNlwtkj8N1DgjEtN1nwvHJ9zzDg4tmjB36SVnU4OkJ_xJe217_CiXSi-sbfgCH7cPyoX9DrRkGhnc-dff2CC8d4=w1920-h1080"></object>
+							  <object data="https://lh3.googleusercontent.com/85S6_Qmv5aAG1ssT9Z5Vh1LLo9c1kwMxbXBUdz7gvU3JqBkXuCAMGlPmI7a21o2uT7oKSD8UfNOsfovj3x31PdZeHfLuj3d00ZZ1Np7SzNyugxX-gb8Ny9fes65s0LIBh-7iN9fLgj8=w1920-h1080"></object>
+							  <object data="https://lh3.googleusercontent.com/J9NUVo9vSaxNQerYrs6YWLkohpE4uxFeLEz5EQMtmGtONURLPMmwiZEmQmeYUI-M06bkRpdvhWK94v8Krdk182avLDGBCMtV_OBS0EOYokn4FSk_zNdN5wt_h_4eZwgTATO71c1FfjE=w1920-h1080"></object>
+							  <object data="https://lh3.googleusercontent.com/0BA_xdU17x55If1mbW-rXwHA82mZz9R4voOzsp5FfiNPGI9Wroiai3oOWtfzrDSA8cyzfB1cczL4ib9Duk8-zr5CdhfD3z1kjLkgbmLuwiWsLHOkS1CBIVbS9l1a_6x8ooU788yVYO0=w1920-h1080"></object>
+							  <object data="https://lh3.googleusercontent.com/LGy57oHVyhcok2DIjzy0y122eXS5TkphgKVwEfiXNZrDcWwh26bow_XZQPAQ1t8V58r_Y5RqCCz2htb2Wq9HfcLeF3llxG8w25XkuFft3qoVW6AL6U5f1PT3-vtIg0axAm0gfdlYE-A=w1920-h1080"></object>
+							</div>
+
 
 
 						</section>	
