Print CV Update

--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
 								</a>	
 							</div>	
 							
-							<!--DOWNLOAD RESUME--D>
+							<!--DOWNLOAD RESUME-->
 							<div class="float-right social-download-wrap">
-								<a href="http://go.hoangbao.org/CV" class="btn btn-default float-left">
+								<a href="http://cv.hoangbao.org/Hoang_Bao_Resume.pdf" class="btn btn-default float-left">
 									<span class="mask"></span>
 									<span class="btn-label">
-										<b>download resume</b>
+										<b>print resume</b>
 										<span class="icon pe-7s-download"></span>
 									</span>
 								</a>
@@ -167,7 +167,7 @@
 								about
 							</h6>
 							<p class="pad-bottom-35 wow fadeInUp" data-wow-duration=".6s">
-								My full name is Tran Nguyen Hoang Bao. I'm a Junior Planner who has 2.5 years of working professionally in both client and agency sides. My goal in the next 3 years is to constantly learn and develop myself in the strategic planning fields.
+								I'm a young marketer who has has been generating interesting experience in the strategy field across brand and communications within 2.5 years, and now wants to explore getting into planning. My goal in the next 3 years is to constantly learn and develop myself in the strategic planning fields at agency.
 							</p>
 							<p class="wow fadeInUp" data-wow-duration=".4s">
 								As a complete social animal, you could find some of my thoughts on <a href="https://www.facebook.com/BrianTranDMO" class="goto-social" target="_blank"  rel="noreferrer">facebook</a>.
@@ -410,7 +410,7 @@
 											<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.4s">
 												<div class="col-sm-3 duration"><span>Aug 2018 – Mar 2019</span></div>
 												<div class="col-sm-9">
-													<span class="job-desn">Marketing Manager</span>
+													<span class="job-desn">Marketing Lead</span>
 													<span class="job-loc">Amomi Co.ltd | Danang City</span>
 													<p class="job-summary p-small">Marketing & communications management for two brands in Da Nang: Xeo Restaurant Chain, R&B Tea Danang. My job was to manage an in-house Marketing team of 5 members in charge for R&D, Media, Digital Marketing. Responsible from product to media publications. Resonsible for sales and media channels, managed agencies and production houses for events and TVCs.</p>
 												</div>
